gitops/workloads/microservices/uniquizz/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniquizz-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniquizz-web
  template:
    metadata:
      labels:
        app: uniquizz-web
    spec:
      containers:
        - name: app
          image: nooblearn2code/uniquizz-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4173
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
