gitops/workloads/microservices/uniquizz/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uniquizz-web-svc
spec:
  selector:
    app: resumind
  ports:
    - port: 80
      targetPort: 5173
